# haskell-opaleye

./: .gitignore  .travis.yml  Bug.hs  BugTest.hs  CHANGELOG.md  LICENSE  README.md  TODO.md  bug.cabal  cabal.project  config.travis.yml  config.yml  opaleye.cabal  stack.yaml
.github/workflows/: ci.yml
Doc/: TUTORIAL.md
Doc/Design/: DESIGN.md
Doc/Tutorial/: DefaultExplanation.lhs  Main.hs  TutorialAdvanced.lhs  TutorialBasic.lhs  TutorialBasicMonomorphic.lhs  TutorialBasicTypeFamilies.lhs  TutorialBasicTypeFamilies2.lhs  TutorialCool.lhs  TutorialCoolRunner.hs  TutorialManipulation.lhs
Opaleye/: Aggregate.hs  Binary.hs  Column.hs  Distinct.hs  Join.hs  Manipulation.hs  Operators.hs  Order.hs  PGTypes.hs  QueryArr.hs  RunQuery.hs  Sql.hs  Table.hs  Values.hs
Opaleye/Internal/: Aggregate.hs  Binary.hs  Column.hs  Distinct.hs  Helpers.hs  Join.hs  NEList.hs  Optimize.hs  Order.hs  PackMap.hs  PrimQuery.hs  Print.hs  QueryArr.hs  RunQuery.hs  Sql.hs  SqlOpaleye.hs  Table.hs  TableMaker.hs  Tag.hs  Unpackspec.hs  Values.hs
Opaleye/Internal/HaskellDB/: PrimQuery.hs  Query.hs  Sql.hs
Opaleye/Internal/HaskellDB/Sql/: Default.hs  Print.hs
Test/: Connection.hs  QuickCheck.hs  Rectangular.hs  Test.hs  TestConnection.hs  TypeFamilies.hs  TypeFamilyTH.hs  Wrapped.hs
Test/Opaleye/Test/: Algebra.hs  Arbitrary.hs  Fields.hs  TraverseA.hs
Tutorial/: Main.hs  TutorialBasic.lhs  TutorialManipulation.lhs
benchmarks/: Main.hs
benchmarks/querygen/: TestTable.hs  bench.hs
opaleye-sqlite/: README.md  cabal.project  opaleye-sqlite.cabal  stack.yaml
opaleye-sqlite/Doc/: UPGRADING.md
opaleye-sqlite/Doc/Tutorial/: DefaultExplanation.lhs  TutorialAdvanced.lhs  TutorialBasic.lhs  TutorialManipulation.lhs
opaleye-sqlite/Test/: QuickCheck.hs  Test.hs
opaleye-sqlite/src/Opaleye/: SQLite.hs
opaleye-sqlite/src/Opaleye/SQLite/: Aggregate.hs  Binary.hs  Column.hs  Constant.hs  Distinct.hs  Join.hs  Manipulation.hs  Operators.hs  Order.hs  PGTypes.hs  QueryArr.hs  RunQuery.hs  Sql.hs  SqlTypes.hs  Table.hs  Values.hs
opaleye-sqlite/src/Opaleye/SQLite/Internal/: #Sql.hs#  .#Sql.hs  Aggregate.hs  Binary.hs  Column.hs  Distinct.hs  Helpers.hs  Join.hs  Optimize.hs  Order.hs  PGTypes.hs  PackMap.hs  PrimQuery.hs  Print.hs  QueryArr.hs  RunQuery.hs  Sql.hs  Table.hs  TableMaker.hs  Tag.hs  Unpackspec.hs  Values.hs
opaleye-sqlite/src/Opaleye/SQLite/Internal/HaskellDB/: PrimQuery.hs  Sql.hs
opaleye-sqlite/src/Opaleye/SQLite/Internal/HaskellDB/Sql/: Default.hs  Generate.hs  Print.hs
src/: Opaleye.hs
src/Opaleye/: Adaptors.hs  Aggregate.hs  Binary.hs  Column.hs  Constant.hs  Distinct.hs  Example.hs  Exists.hs  Field.hs  FunctionalJoin.hs  Inferrable.hs  Join.hs  Label.hs  Lateral.hs  Manipulation.hs  Map.hs  MaybeFields.hs  Operators.hs  Order.hs  PGTypes.hs  QueryArr.hs  RunQuery.hs  RunSelect.hs  Schema.hs  Select.hs  Sql.hs  SqlType.hs  SqlTypes.hs  Table.hs  ToFields.hs  TypeFamilies.hs  Unpackspec.hs  Values.hs  Window.hs  With.hs  WithRecursive.hs
src/Opaleye/Experimental/: Enum.hs
src/Opaleye/Internal/: Aggregate.hs  Binary.hs  Column.hs  Constant.hs  Distinct.hs  Dynamic.hs  Helpers.hs  Inferrable.hs  JSONBuildObjectFields.hs  Join.hs  Label.hs  Lateral.hs  Locking.hs  Manipulation.hs  Map.hs  MaybeFields.hs  Operators.hs  Optimize.hs  Order.hs  PGTypes.hs  PGTypesExternal.hs  PackMap.hs  PackMapColumn.hs  PrimQuery.hs  Print.hs  QueryArr.hs  Rebind.hs  RunQuery.hs  RunQueryExternal.hs  Schema.hs  Sql.hs  Table.hs  TableMaker.hs  Tag.hs  TypeFamilies.hs  TypeFamilies2.hs  TypeFamiliesTH.hs  Unpackspec.hs  Values.hs  Window.hs
src/Opaleye/Internal/HaskellDB/: PrimQuery.hs  Sql.hs
src/Opaleye/Internal/HaskellDB/Sql/: Default.hs  Generate.hs  Print.hs
