name:            bug
version:         0
build-type:      Simple
cabal-version:   >= 1.18

library
  default-language: Haskell2010
  hs-source-dirs: .
  build-depends: base
  exposed-modules: Bug

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BugTest.hs
  hs-source-dirs: .
  build-depends:
    base >= 4 && < 5,
    product-profunctors
