name:            opaleye
copyright:       Copyright (c) 2014-2016 Purely Agile Limited
version:         0.5.2.2
synopsis:        An SQL-generating DSL targeting PostgreSQL
description:     An SQL-generating DSL targeting PostgreSQL.  Allows
                 Postgres queries to be written within Haskell in a
                 typesafe and composable fashion.
homepage:        https://github.com/tomjaguarpaw/haskell-opaleye
bug-reports:     https://github.com/tomjaguarpaw/haskell-opaleye/issues
license:         BSD3
license-file:    LICENSE
author:          Purely Agile
maintainer:      Purely Agile
category:        Database
build-type:      Simple
cabal-version:   >= 1.18
extra-doc-files: *.md,
                 Doc/*.md
tested-with:     GHC==8.0.1, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3

source-repository head
  type:     git
  location: https://github.com/tomjaguarpaw/haskell-opaleye.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      -- attoparsec can be removed once postgresql-simple patch in
      -- Internal.RunQuery is merged upstream
      aeson               >= 0.6     && < 1.1
    , attoparsec          >= 0.10.3  && < 0.14
    , base                >= 4.6     && < 5
    , base16-bytestring   >= 0.1.1.6 && < 0.2
    , case-insensitive    >= 1.2     && < 1.3
    , bytestring          >= 0.10    && < 0.11
    , contravariant       >= 1.2     && < 1.5
    , postgresql-simple   >= 0.5     && < 0.6
    , pretty              >= 1.1.1.0 && < 1.2
    , product-profunctors >= 0.6.2   && < 0.8
    , profunctors         >= 4.0     && < 5.3
    , semigroups          >= 0.13    && < 0.19
    , text                >= 0.11    && < 1.3
    , transformers        >= 0.3     && < 0.6
    , time                >= 1.4     && < 1.7
    , time-locale-compat  >= 0.1     && < 0.2
    , uuid                >= 1.3     && < 1.4
    , void                >= 0.4     && < 0.8
  exposed-modules: Opaleye,
                   Opaleye.Aggregate,
                   Opaleye.Binary,
                   Opaleye.Column,
                   Opaleye.Constant,
                   Opaleye.Distinct,
                   Opaleye.FunctionalJoin,
                   Opaleye.Join,
                   Opaleye.Label,
                   Opaleye.Manipulation,
                   Opaleye.Operators,
                   Opaleye.Order,
                   Opaleye.PGTypes,
                   Opaleye.QueryArr,
                   Opaleye.RunQuery,
                   Opaleye.Sql,
                   Opaleye.Table,
                   Opaleye.Values,
                   Opaleye.Internal.Aggregate,
                   Opaleye.Internal.Binary,
                   Opaleye.Internal.Column,
                   Opaleye.Internal.Distinct,
                   Opaleye.Internal.Helpers,
                   Opaleye.Internal.Join,
                   Opaleye.Internal.Label,
                   Opaleye.Internal.Order,
                   Opaleye.Internal.Operators,
                   Opaleye.Internal.Optimize,
                   Opaleye.Internal.PackMap,
                   Opaleye.Internal.PGTypes,
                   Opaleye.Internal.PrimQuery,
                   Opaleye.Internal.Print,
                   Opaleye.Internal.QueryArr,
                   Opaleye.Internal.RunQuery,
                   Opaleye.Internal.Sql,
                   Opaleye.Internal.Table,
                   Opaleye.Internal.TableMaker,
                   Opaleye.Internal.Tag,
                   Opaleye.Internal.Unpackspec,
                   Opaleye.Internal.Values
                   Opaleye.Internal.HaskellDB.PrimQuery,
                   Opaleye.Internal.HaskellDB.Sql,
                   Opaleye.Internal.HaskellDB.Sql.Default,
                   Opaleye.Internal.HaskellDB.Sql.Generate,
                   Opaleye.Internal.HaskellDB.Sql.Print
  ghc-options:     -Wall

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: QuickCheck
  hs-source-dirs: Test
  build-depends:
    aeson >= 0.6 && < 1.1,
    base >= 4 && < 5,
    containers,
    contravariant,
    multiset,
    postgresql-simple,
    profunctors,
    product-profunctors,
    QuickCheck,
    semigroups,
    text >= 0.11 && < 1.3,
    time,
    opaleye
  ghc-options: -Wall

test-suite tutorial
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: TutorialAdvanced,
                 TutorialBasic,
                 TutorialManipulation,
                 TutorialBasicMonomorphic,
                 TutorialBasicTypeFamilies,
                 DefaultExplanation
  hs-source-dirs: Doc/Tutorial
  build-depends:
    base >= 4 && < 5,
    postgresql-simple,
    profunctors,
    product-profunctors >= 0.6,
    time,
    opaleye
  ghc-options: -Wall
