name:            opaleye
copyright:       Copyright (c) 2014-2018 Purely Agile Limited; 2019-2022 Tom Ellis
version:         0.9.0.0
synopsis:        An SQL-generating DSL targeting PostgreSQL
description:     An SQL-generating DSL targeting PostgreSQL.  Allows
                 Postgres queries to be written within Haskell in a
                 typesafe and composable fashion.
homepage:        https://github.com/tomjaguarpaw/haskell-opaleye
bug-reports:     https://github.com/tomjaguarpaw/haskell-opaleye/issues
license:         BSD3
license-file:    LICENSE
maintainer:      Tom Ellis
category:        Database
build-type:      Simple
cabal-version:   1.18
extra-doc-files: README.md
                 CHANGELOG.md
                 *.md
tested-with:     GHC==9.2, GHC==9.0, GHC==8.10, GHC==8.8, GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0

source-repository head
  type:     git
  location: https://github.com/tomjaguarpaw/haskell-opaleye.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      aeson               >= 0.6     && < 2.1
    , base                >= 4.9     && < 4.17
    , base16-bytestring   >= 0.1.1.6 && < 1.1
    , case-insensitive    >= 1.2     && < 1.3
    , bytestring          >= 0.10    && < 0.12
    , contravariant       >= 1.2     && < 1.6
    , postgresql-simple   >= 0.6     && < 0.7
    , pretty              >= 1.1.1.0 && < 1.2
    , product-profunctors >= 0.11.0.3 && < 0.12
    , profunctors         >= 4.0     && < 5.7
    , scientific          >= 0.3     && < 0.4
    , semigroups          >= 0.13    && < 0.21
    , text                >= 0.11    && < 1.3
    , transformers        >= 0.3     && < 0.6
    , time-compat         >= 1.9.5   && < 1.12
    , time-locale-compat  >= 0.1     && < 0.2
    , uuid                >= 1.3     && < 1.4
    , void                >= 0.4     && < 0.8
  exposed-modules: Opaleye,
                   Opaleye.Adaptors,
                   Opaleye.Aggregate,
                   Opaleye.Binary,
                   Opaleye.Column,
                   Opaleye.Distinct,
                   Opaleye.Experimental.Enum,
                   Opaleye.Exists,
                   Opaleye.Field,
                   Opaleye.FunctionalJoin,
                   Opaleye.Join,
                   Opaleye.Label,
                   Opaleye.Lateral,
                   Opaleye.Manipulation,
                   Opaleye.MaybeFields,
                   Opaleye.Operators,
                   Opaleye.Order,
                   Opaleye.RunSelect,
                   Opaleye.Select,
                   Opaleye.Sql,
                   Opaleye.SqlTypes,
                   Opaleye.Table,
                   Opaleye.ToFields,
                   Opaleye.TypeFamilies,
                   Opaleye.Values,
                   Opaleye.Internal.Aggregate,
                   Opaleye.Internal.Binary,
                   Opaleye.Internal.Constant,
                   Opaleye.Internal.Column,
                   Opaleye.Internal.Distinct,
                   Opaleye.Internal.Locking,
                   Opaleye.Internal.Helpers,
                   Opaleye.Internal.Inferrable,
                   Opaleye.Internal.Join,
                   Opaleye.Internal.JSONBuildObjectFields,
                   Opaleye.Internal.Lateral,
                   Opaleye.Internal.Map,
                   Opaleye.Internal.Manipulation,
                   Opaleye.Internal.MaybeFields,
                   Opaleye.Internal.Order,
                   Opaleye.Internal.Operators,
                   Opaleye.Internal.Optimize,
                   Opaleye.Internal.PackMap,
                   Opaleye.Internal.PGTypes,
                   Opaleye.Internal.PGTypesExternal,
                   Opaleye.Internal.PrimQuery,
                   Opaleye.Internal.Print,
                   Opaleye.Internal.QueryArr,
                   Opaleye.Internal.Rebind,
                   Opaleye.Internal.RunQuery,
                   Opaleye.Internal.RunQueryExternal,
                   Opaleye.Internal.Sql,
                   Opaleye.Internal.Table,
                   Opaleye.Internal.TableMaker,
                   Opaleye.Internal.Tag,
                   Opaleye.Internal.TypeFamilies,
                   Opaleye.Internal.Unpackspec,
                   Opaleye.Internal.Values
                   Opaleye.Internal.HaskellDB.PrimQuery,
                   Opaleye.Internal.HaskellDB.Sql,
                   Opaleye.Internal.HaskellDB.Sql.Default,
                   Opaleye.Internal.HaskellDB.Sql.Generate,
                   Opaleye.Internal.HaskellDB.Sql.Print
  ghc-options:     -Wall -Wcompat -Wno-unticked-promoted-constructors

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: Connection,
                 Opaleye.Test.Arbitrary,
                 Opaleye.Test.Fields,
                 Opaleye.Test.TraverseA,
                 QuickCheck,
                 TypeFamilies,
                 Wrapped
  hs-source-dirs: Test
  build-depends:
    aeson,
    base >= 4 && < 5,
    bytestring,
    containers,
    contravariant,
    dotenv >= 0.3.1,
    multiset,
    postgresql-simple,
    profunctors,
    product-profunctors,
    QuickCheck,
    semigroups,
    text >= 0.11 && < 1.3,
    time-compat,
    uuid,
    transformers,
    hspec,
    hspec-discover,
    opaleye
  ghc-options: -Wall

test-suite tutorial
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules: TutorialAdvanced,
                 TutorialBasic,
                 TutorialManipulation,
                 TutorialBasicMonomorphic,
                 DefaultExplanation
  hs-source-dirs: Doc/Tutorial
  build-depends:
    base >= 4 && < 5,
    postgresql-simple,
    profunctors,
    product-profunctors >= 0.6,
    time,
    opaleye
  ghc-options: -Wall
